// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`push-handler creates an issue 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff. It&#x27;s been assigned to @JasonEtco because they committed the code.",
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue and assigns the configured user 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff. It&#x27;s been automagically assigned to @matchai.",
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue and assigns the configured users 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff. It&#x27;s been automagically assigned to @JasonEtco, @matchai and @defunkt.",
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;

exports[`push-handler creates an issue with a truncated title 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff. It&#x27;s been assigned to @JasonEtco because they committed the code.",
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "This is a really, really, really, really, really, really, really, really, really...",
  },
]
`;

exports[`push-handler creates an issue without assigning anyone 1`] = `
Array [
  Object {
    "body": "https://github.com/JasonEtco/tests/blob/6c2373ad036d292f7e9467981ba8b467e8b8b0ff/.travis.yml#L11

---

###### This issue was generated by [todo](https://todo.jasonet.co) based on a \`TODO\` comment in 6c2373ad036d292f7e9467981ba8b467e8b8b0ff.",
    "owner": "JasonEtco",
    "repo": "tests",
    "title": "I am an example title",
  },
]
`;
